Fix #343 - borken links in website

--- a/website/pages/docs/core/TypedBody.mdx
+++ b/website/pages/docs/core/TypedBody.mdx
@@ -344,9 +344,9 @@ You know what? `@TypedBody()` utilizes [`typia.assert<T>()`](https://typia.io/do
 With those comment tags, you can add additional validation logics. If you want to add a custom validation logic, you also can do it. Read below Guide Docments of [typia](https://typia.io), and see the example code. You may understand how to utilize such comment tags, in a few minutes.
 
   - [**`typia` > Validators > Comment Tags**](https://typia.io/docs/validators/comment-tags/)
-    - [Outline](/docs/validators/comment-tags/#outline)
-    - [Supported Tags](/docs/validators/comment-tags/#supported-tags)
-    - [Customization](/docs/validators/comment-tags/#customization)
+    - [Outline](https://typia.io/docs/validators/comment-tags/#outline)
+    - [Supported Tags](https://typia.io/docs/validators/comment-tags/#supported-tags)
+    - [Customization](https://typia.io/docs/validators/comment-tags/#customization)
 
 <Tabs items={['TypeScript Source Code', 'Compiled JavaScript File']}>
     <Tab>
