Fix typo in website's TypeRoute
Fix typing mistake in website's TypeRoute.
compliation to compilation.

--- a/website/pages/docs/core/TypedRoute.mdx
+++ b/website/pages/docs/core/TypedRoute.mdx
@@ -269,7 +269,7 @@ exports.BbsArticlesController = BbsArticlesController;
 
 Just call `@TypedRoute.${method}()` function on the target method, that's all.
 
-`Nestia` will analyze your type (`IBbsArticle`), and writes optimal code for the target type, in the compliation level. If you click the "Compiled JavaScript File" tab of above, you can see the optimal validation and JSON serialization code. 
+`Nestia` will analyze your type (`IBbsArticle`), and writes optimal code for the target type, in the compilation level. If you click the "Compiled JavaScript File" tab of above, you can see the optimal validation and JSON serialization code. 
 
 Such optimization is called AOT (Ahead of Time) compilation, and it is the secret of `TypedRoute`.
 
