--- a/website/pages/docs/index.mdx
+++ b/website/pages/docs/index.mdx
@@ -46,6 +46,7 @@ Nestia is a set of helper libraries for [NestJS](https://docs.nestjs.com), suppo
     - SDK generator for clients
     - Swagger generator evolved than ever
     - Automatic E2E test functions generator
+    - Backend Simulator for client developers
   - `nestia`: just CLI (command line interface) tool
 
 <br/>
@@ -54,13 +55,14 @@ Nestia is a set of helper libraries for [NestJS](https://docs.nestjs.com), suppo
         Only **one line** required, with pure TypeScript type
     </Alert>
     <Alert severity="success">
-        Runtime validator is **20,000x** faster than `class-validator`
+        Enhance performance **30x** up
+        - Runtime validator is **20,000x** faster than `class-validator`
+        - JSON serialization is **200x faster** than `class-transformer`
     </Alert>
-    <Alert severity="info">
-        JSON serialization is **200x faster** than `class-transformer`
-    </Alert>
-    <Alert severity="error">
-        SDK is similar with [tRPC](https://trpc.io), but much advanced
+    <Alert severity="info"> 
+        Software Development Kit
+        - SDK is similar with [tRPC](https://trpc.io), but much advanced
+        - Simulator is similar with [msw](https://mswjs.io/), but fully automated
     </Alert>
 </Stack>
 
