Enhance simulator docs

--- a/website/pages/index.mdx
+++ b/website/pages/index.mdx
@@ -1,6 +1,8 @@
 import Alert from '@mui/material/Alert';
 import Stack from '@mui/material/Stack';
 
+<meta http-equiv="refresh" content="0; url=/docs" />
+
 ## Outline
 
 ![Nestia Logo](/logo.png)
