--- a/website/pages/docs/migrate.mdx
+++ b/website/pages/docs/migrate.mdx
@@ -203,7 +203,7 @@ As you can see from above example case, `@nestia/migrate` perfectly revives ever
 
 
 
-## Online Migration
+## `@nestia/editor`
 I'm making a new library named `@nestia/editor`.
 
 It's a type of evolved `swagger-ui`, embedding TypeScript Editor, `@nestia/migrate` and `@nestia/sdk`. 
