Revise documents a little bit

--- a/website/pages/docs/migrate.mdx
+++ b/website/pages/docs/migrate.mdx
@@ -3,7 +3,7 @@ import { Callout, Tabs, Tab } from 'nextra-theme-docs'
 # Swagger to NestJS
 ## Outline
 <Callout type="warning">
-Supports only OpenAPI v3.0
+Supports OpenAPI v3.0 only.
 </Callout>
 
 ```bash copy filename="Terminal" showLineNumbers {}
@@ -203,7 +203,7 @@ As you can see from above example case, `@nestia/migrate` perfectly revives ever
 
 
 
-## `@nestia/editor`
+## Nestia Editor
 I'm making a new library named `@nestia/editor`.
 
 It's a type of evolved `swagger-ui`, embedding TypeScript Editor, `@nestia/migrate` and `@nestia/sdk`. 
