--- a/website/pages/docs/sdk/sdk.mdx
+++ b/website/pages/docs/sdk/sdk.mdx
@@ -1,4 +1,4 @@
-import { Callout, Tabs, Tab } from 'nextra-theme-docs'
+import { Tabs, Tab } from 'nextra-theme-docs'
 
 # SDK Library
 ## Outline
@@ -22,19 +22,13 @@ npx nestia sdk
     </Tab>
 </Tabs>
 
-Configure [`nestia.config.ts`](#nestiaconfigts) file and run `npx nestia sdk` command.
+Collection of `fetch` functions with type definitions.
 
-Then, `@nestia/sdk` will analyze your NestJS backend server code, and generate SDK (Software Development Kit) library. The newly generated SDK library would be composed with `DTO` types and `fetch` functions with type definitions following your NestJS server. With the SDK library, you can easily develop e2e test program. Also, frontend developers can utilize the SDK library to interact with your NestJS backend server, much safely and conveniently.
+Configure [`nestia.config.ts`](#nestiaconfigts) file and run `npx nestia sdk` command. Then, `@nestia/sdk` will analyze your NestJS backend server code, and generate SDK (Software Development Kit) library. The newly generated SDK library would be composed with `DTO` and `fetch` functions with type definitions following your NestJS server. 
 
-If you can't imagine how the SDK library works, then look at the gif image of below. Left side is the NestJS backend server program, and right side is the Frontend program interacting with your server. As you can see, frontend developer is utilizing auto completion through SDK library. 
+With the SDK library, you can easily develop e2e test program. Also, frontend developers can utilize the SDK library to interact with your NestJS backend server, much safely and conveniently. If you can't imagine how the SDK library works, then look at the gif image of below. Left side is the NestJS backend server program, and right side is the Frontend program interacting with your server.
 
 Isn't it look like much more convenient and safer than before when using [Swagger Documents](swagger)?
-
-<Callout type="warning">
-`@nestia/sdk` also can build [Swagger Documents](./swagger).
-
-Furthermore, `@nestia/sdk` is even much easier and powerful than `@nestjs/swagger`.
-</Callout>
 
 ![SDK](https://user-images.githubusercontent.com/13158709/215004990-368c589d-7101-404e-b81b-fbc936382f05.gif)
 
