--- a/website/pages/docs/setup.mdx
+++ b/website/pages/docs/setup.mdx
@@ -2,9 +2,8 @@ import Alert from '@mui/material/Alert';
 import AlertTitle from '@mui/material/AlertTitle';
 import Stack from '@mui/material/Stack';
 
-# Setup
 ## Boilerplate
-```bash
+```bash showLineNumbers copyable
 npx nestia start <directory>
 ```
 
@@ -15,8 +14,9 @@ Boilerplate would be automatically constructed in the `<directory>`.
 
 
 
-## Setup Wizard
-```bash
+## Setup
+### Setup Wizard
+```bash showLineNumbers copy
 npm install --save-dev nestia
 npx nestia setup
 ```
@@ -25,11 +25,66 @@ When you want to setup `nestia` in exiting project, just run above `npx nestia s
 
 Setup Wizard will install and configure everything automatically.
 
+### Webpack
+When you want to bundle your NestJS project into a single file, you have to install `webpack` manually.  
 
+Never run `nest build --webpack` command of `@nestjs/cli`, because it is not compatible with `nestia`.
 
+```bash showLineNumbers copy
+# SETUP NESTIA
+npm install --save-dev nestia
+npx nestia setup
 
-## Manual Setup
-```bash
+# INSTALL WEBPACK
+npm install --save-dev webpack webpack-cli webpack-node-externals
+```
+
+After installing both `nestia` and `webpack`, configure `webpack.config.js` file like below. 
+
+If required, update `entry`, `output` or `optimization` properties as you want.
+
+```javascript filename="webpack.config.js" showLineNumbers copy
+const path = require("path");
+const nodeExternals = require('webpack-node-externals');
+
+module.exports = {
+    // CUSTOMIZE HERE
+    entry: ['./src/main.ts'],
+    output: {
+        path: path.join(__dirname, 'dist'),
+        filename: 'main.js',
+    },
+    optimization: {
+        minimize: false
+    },
+
+    // JUST KEEP THEM
+    externals: [nodeExternals()],
+    mode: 'development',
+    target: 'node',
+    module: {
+        rules: [
+            {
+                test: /\.ts$/,
+                exclude: /node_modules/,
+                loader: 'ts-loader',
+            }
+        ]
+    },
+    resolve: {
+        extensions: ['.tsx', '.ts', '.js'],
+    },
+};
+```
+
+After that, you can bundle your NestJS project into a single file, just by running `npx webpack` command.
+
+```bash showLineNumbers copy
+npx webpack
+```
+
+### Manual Setup
+```bash showLineNumbers copyable
 # COMPILERS
 npm install --save-dev typescript
 npm install --save-dev ts-node
@@ -50,9 +105,9 @@ If you want to install `nestia` manually, you have to install `ts-node` and `ts-
     "compilerOptions": {
         "plugins": [
             { "transform": "@nestia/core/lib/transform" },
-            { "transform": "typia/lib/transform" }
-        ]
-    }
+            { "transform": "typia/lib/transform" },
+        ],
+    },
 }
 ```
 
@@ -78,5 +133,31 @@ Of course, you've to run the `npm run prepare` command after configuration.
 <Stack>
     <Alert severity="warning">
 If manual setup is difficult, just use the [Setup Wizard](#setup-wizard).
+    </Alert>
+</Stack>
+
+
+
+
+## Standard TypeScript Only
+If you're using `@nestia/core` module, you've to use only standard TypeScript compiler.
+
+Do you remember? `@nestia/core` boosts up [runtime validation](./core/typedbody) and [JSON serialization](./core/typedroute) through [AOT compilation](./pure/#aot-compilation). By the way, `@nestia/core` performs the AOT compilation through standardd TypeScript compiler API. Therefore, if you want to utilize those superfast decorators of `@nestia/core` module, you have to use only standard TypeScript compiler.
+
+I also know that non-standard compilers are faster than standard. However, all of them are erasing type information, and skip typec checking, for rapid compilation. Without type information, `@nestia/core` can't do anything, and it is the reason why `@nestia/core` is not supporting them.
+
+  - Standard TypeScript Compiler (keep type info)
+    - [Microsoft/TypeScript](https://github.com/microsoft/typescript)
+  - Non-standard TypeScript Compilers (erase type info)
+    - [SWC](https://swc.rs/)
+    - [ESBuild](https://esbuild.github.io/)
+    - [Babel](https://babeljs.io/)
+
+<br/>
+<Stack>
+    <Alert severity="info">
+[SWC](https://swc.rs/) author is preparing a new project [STC](https://github.com/dudykr/stc), and it does not erase type info.
+
+Therefore, `nestia` will support it.
     </Alert>
 </Stack>
