Update setup.mdx -> add ts-loader

--- a/website/pages/docs/setup.mdx
+++ b/website/pages/docs/setup.mdx
@@ -37,8 +37,9 @@ Setup Wizard will install and configure everything automatically.
 npm install --save-dev nestia
 npx nestia setup
 
-# INSTALL WEBPACK
-npm install --save-dev webpack webpack-cli webpack-node-externals
+# INSTALL TS-LOADER & WEBPACK
+npm install --save-dev ts-loader
+npm install --save-dev webpack webpack-cli webpack-node-externals 
 ```
 
 When you want to bundle your NestJS project into a single file, you have to install `webpack` manually.  
