--- a/website/pages/docs/core/TypedParam.mdx
+++ b/website/pages/docs/core/TypedParam.mdx
@@ -5,7 +5,7 @@ import { Tabs, Tab } from 'nextra-theme-docs'
 ```typescript filename="@nestia/core"
 export function TypedParam(name: string): ParameterDecorator;
 export function TypedParam(
-    nane: string, 
+    name: string, 
     type: "uuid" | "date"
 ): ParameterDecorator;
 ```
