--- a/website/pages/docs/migrate.mdx
+++ b/website/pages/docs/migrate.mdx
@@ -6,7 +6,7 @@ import { Callout, Tabs, Tab } from 'nextra-theme-docs'
 Supports OpenAPI v3.0 only.
 </Callout>
 
-```bash copy filename="Terminal" showLineNumbers {}
+```bash filename="Terminal" copy showLineNumbers {}
 # SETUP GLOBALLY
 npm install -g @nestia/migrate
 
@@ -35,7 +35,7 @@ It means that, with `@nestia/migrate`, you can generate [SDK Library](./sdk/sdk)
 
 
 ## Setup
-```bash copy filename="Terminal" showLineNumbers {}
+```bash filename="Terminal" copy showLineNumbers {}
 # SETUP GLOBALLY
 npm install -g @nestia/migrate
 
