--- a/website/pages/docs/sdk/simulator.mdx
+++ b/website/pages/docs/sdk/simulator.mdx
@@ -18,7 +18,7 @@ export default config;
 ```
     </Tab>
     <Tab>
-```bash filename="Terminal" showLineNumbers {}
+```bash filename="Terminal" copy showLineNumbers {}
 npx nestia sdk
 ```
     </Tab>
