--- a/website/pages/docs/sdk/swagger.mdx
+++ b/website/pages/docs/sdk/swagger.mdx
@@ -77,10 +77,12 @@ export default config;
 ```
     </Tab>
     <Tab>
-```typescript filename="INestiaConfig.ts" showLineNumbers {12-17, 154-197}
+```typescript filename="INestiaConfig.ts" showLineNumbers {14-19, 156-199}
 import type ts from "typescript";
 
-import type { ISwaggerDocument } from "./structures/ISwaggerDocument";
+import type { ISwagger } from "./structures/ISwagger";
+import type { ISwaggerInfo } from "./structures/ISwaggerInfo";
+import type { ISwaggerSecurityScheme } from "./structures/ISwaggerSecurityScheme";
 import type { StripEnums } from "./utils/StripEnums";
 
 /**
@@ -249,12 +251,12 @@ export namespace INestiaConfig {
          *
          * If omitted, `package.json` content would be used instead.
          */
-        info?: Partial<ISwaggerDocument.IInfo>;
+        info?: Partial<ISwaggerInfo>;
 
         /**
          * List of server addresses.
          */
-        servers?: ISwaggerDocument.IServer[];
+        servers?: ISwagger.IServer[];
 
         /**
          * Security schemes.
